# domainspec-ontology

./: CLAUDE.md  README.md  REFACTORING_NOTES.md  USAGE_GUIDE.md  __init__.py  cli.py  models.py  pyproject.toml  setup.py
docs/: USAGE.md  domain-tagging-constitution.md  quick-reference.md
embeddings/: client.py
extractors/: __init__.py  dictionary_extractor.py  dictionary_linter.py  tag_scanner.py
personal_assistant/: README.md
personal_assistant/backend/: README.md  apps.py  models.py
personal_assistant/backend/migrations/: 0001_initial.py
personal_assistant/docs/: discovery-context-strategies.md
registry/: __init__.py  builder.py
semantic_index/: ARCHITECTURE_DIAGRAM.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  OVERVIEW.md  QUERY_SYSTEM.md  README.md  __init__.py  cli.py  mcp_server.py  models.py  setup.py  taxonomy.py
semantic_index/docs/: USAGE.md  domain-tagging-constitution.md  models-reference.md  quick-reference.md
semantic_index/embeddings/: __init__.py  client.py
semantic_index/examples/: example_tagged_module.py
semantic_index/extractors/: dictionary_extractor.py  dictionary_linter.py  event_validator.py  tag_scanner.py
semantic_index/generators/: spec_yaml_writer.py
semantic_index/query/: domain_slice.py  vector_search.py
semantic_index/registry/: builder.py
semantic_index/tests/: __init__.py  test_builder.py  test_cli_integration.py  test_dictionary_extractor.py  test_dictionary_linter.py  test_embeddings.py  test_event_validator.py  test_tag_scanner.py
tests/: test_builder.py  test_cli_integration.py  test_dictionary_extractor.py  test_dictionary_linter.py  test_embeddings.py  test_tag_scanner.py
